<resources>
    <string name="app_name">BLOGG</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="login">Login</string>
    <string name="background_image">background image</string>
    <string name="please_wait">Please wait</string>
    <string name="confirm_password">Confirm password</string>
    <string name="to_login">to login</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="server_error">Server Error</string>
    <string name="email_password_error">Email may not be registered or password is incorrect</string>
    <string name="network_error">Error performing network call</string>
    <string name="email_username_exits">Username or email already exists</string>
    <string name="password_empty">Password can\'t be empty</string>
    <string name="email_invalid">Enter valid email</string>
    <string name="password_length_error">Password must be at least 8 characters long</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="username_length_error">Username must be at least 5 characters long</string>
    <string name="error_fetching_blogs">Error Fetching Blogs</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="have_an_account">Have an account?</string>
    <string name="blog_list_empty">Blog List Empty</string>
    <string name="no_blogs_created_at_the_moment">No blogs created at the moment</string>
    <string name="last_updated">Last updated :</string>
</resources>